[project]
name = "cloud-loader"
version = "0.5.0"
description = "AI Agent Services - File Transfer, MD Storage & Agent Hub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.22",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.7.0",
    "tavily-python>=0.3.0",
    "httpx>=0.26.0",
    "apscheduler>=3.10.0",
    "jinja2>=3.1.6",
    "tweepy>=4.14.0",
    "claude-agent-sdk>=0.1.31",
]

[project.scripts]
cloud-loader = "cloud_loader.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_loader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
